--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "@types/node": "^20.10.0",
         "@types/react": "^18.3.27",
         "@types/react-dom": "^18.3.7",
+        "baseline-browser-mapping": "^2.8.32",
         "typescript": "^5.3.3"
     },
     "scripts": {
