--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@radix-ui/react-slot": "^1.1.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.487.0",
@@ -16,10 +15,14 @@
         "tailwind-merge": "^3.4.0"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.17",
         "@types/node": "^20.10.0",
         "@types/react": "^18.3.27",
         "@types/react-dom": "^18.3.7",
+        "autoprefixer": "^10.4.22",
         "baseline-browser-mapping": "^2.8.32",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.17",
         "typescript": "^5.3.3"
     },
     "scripts": {
