chore: Apply Prettier formatting and refine UI component styling across the application.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format:source": "prettier --config .prettierrc --write \"{plugins,src}/**/*.{js,ts,jsx,tsx,css}\"",
+    "nit:source": "prettier --config .prettierrc --list-different \"{plugins,src}/**/*.{js,ts,jsx,tsx,css}\"",
+    "prettier": "pnpm format:source",
+    "prettier:diff": "pnpm nit:source"
   }
 }
